--- a/.pr_agent.toml
+++ b/.pr_agent.toml
@@ -41,8 +41,8 @@ minimal_minutes_for_incremental_review = 0
 [pr_description] # /describe #
 publish_labels = true
 publish_description_as_comment = false
-add_original_user_description = false
-keep_original_user_title = false
+add_original_user_description = true
+keep_original_user_title = true
 use_bullet_points = true
 extra_instructions = ""
 enable_pr_type = true
