--- a/.pr_agent.toml
+++ b/.pr_agent.toml
@@ -40,9 +40,9 @@ minimal_minutes_for_incremental_review = 0
 
 [pr_description] # /describe #
 publish_labels = true
-publish_description_as_comment = false
-add_original_user_description = false
-keep_original_user_title = false
+publish_description_as_comment = true
+add_original_user_description = true
+keep_original_user_title = true
 use_bullet_points = true
 extra_instructions = ""
 enable_pr_type = true
@@ -52,7 +52,7 @@ final_update_message = true
 
 
 # markers
-use_description_markers = false
+use_description_markers = true
 include_generated_by_header = true
 
 #custom_labels = ['Bug fix', 'Tests', 'Bug fix with tests', 'Enhancement', 'Documentation', 'Other']
